GA-25 update to use List